src/main/java/com/example/demo/__core/errors/Ex403.java
package com.example.demo.__core.errors;

public class Ex403 extends RuntimeException{
	public Ex403(String msg) {
		super(msg);
	}
}

